@@ -40,12 +40,21 @@
 
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.2">Version 4.0.2</a></strong><br/>
 <ul>
-    <li>- [Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)</li>
+    <li>[Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)</li>
     <li>[Bugfix] Incomplete transfer synchronizing root directory (WebDAV) (<a
             href="http://trac.cyberduck.ch/ticket/5662">#5662</a>)
     </li>
     <li>[Bugfix] Wrong version downloaded (S3 Versioning) (<a
             href="http://trac.cyberduck.ch/ticket/5758">#5758</a>)
+    </li>
+    <li>[Bugfix] Wrong local path for uploads with file chooser (Windows) (<a
+            href="http://trac.cyberduck.ch/ticket/5590">#5590</a>)
+    </li>
+    <li>[Bugfix] Interoperability (FTP) (<a
+            href="http://trac.cyberduck.ch/ticket/5763">#5763</a>, <a
+            href="http://trac.cyberduck.ch/ticket/5757">#5757</a>, <a
+            href="http://trac.cyberduck.ch/ticket/5772">#5772</a>, <a
+            href="http://trac.cyberduck.ch/ticket/5771">#5771</a>)
     </li>
 </ul>
 
